fix esp new proj image alignment

--- a/css/bjc.css
+++ b/css/bjc.css
@@ -489,7 +489,7 @@ html[lang="es"] .examSummary:before {
   content: "En el examen AP...";
 }
 
-html[lang="es"] .atwork:before, 
+html[lang="es"] .atwork:before,
 html[lang="es"] .atworkFullWidth:before {content: "Científicos informáticos en el trabajo";}
 
 html[lang="es"] .vocab:before,
@@ -534,9 +534,9 @@ div.newProject span.text {
 
 html[lang="es"] div.newProject span.text {
   position: absolute;
-  margin-left: 353px;
-  padding-top: 1.13em;
-  z-index:2;
+  margin-left: 445px;
+  padding-top: 1.15em;
+  z-index: 2;
   color: #333;
 }
 
